# StreamBenchmarks

./: .gitignore
WindFlow/FraudDetection/: CMakeLists.txt  complete.sh  profiling.sh  throughput_collection.sh  throughput_collection_default_pinning.sh
WindFlow/FraudDetection/includes/nodes/: light_source.hpp
WindFlow/FraudDetection/includes/util/: cli_util.hpp
WindFlow/FraudDetection/src/: Makefile  fd.cpp
WindFlow/SpikeDetection/: .gitignore  README.md  first.sh  key_window.sh  key_window_default_pinning.sh  profiling.sh  throughput_collection.sh  throughput_collection_default_pinning.sh
WindFlow/SpikeDetection/includes/nodes/: average_calculator_map.hpp  detector.hpp  sink.hpp  source.hpp
WindFlow/SpikeDetection/includes/util/: cli_util.hpp  constants.hpp
WindFlow/SpikeDetection/src/: Makefile  sd.cpp
WindFlow/TrafficMonitoring/: .gitignore  profiling.sh  throughput_collection.sh  throughput_collection_default_pinning.sh
WindFlow/TrafficMonitoring/gdal-2.4.0/gcore/: gdal.h  gdal_frmts.h  gdal_priv.h
WindFlow/TrafficMonitoring/gdal-2.4.0/ogr/: ogr_api.h  ogr_core.h  ogr_feature.h  ogr_featurestyle.h  ogr_geometry.h  ogr_spatialref.h
WindFlow/TrafficMonitoring/includes/nodes/: map_matcher.hpp  (+1 more)
WindFlow/TrafficMonitoring/src/: Makefile  tm.cpp
WindFlow/WordCount/: .gitignore  CMakeLists.txt  README.md  complete.sh  first.sh  profiling.sh  throughput_collection.sh  throughput_collection_default_pinning.sh
WindFlow/WordCount/includes/nodes/: source.hpp
WindFlow/WordCount/includes/util/: cli_util.hpp
WindFlow/WordCount/src/: Makefile  wc.cpp
(+5 files in other folders)
